--- a/style.css
+++ b/style.css
@@ -176,6 +176,18 @@ h2 {
     display: flex;
     flex-direction: column; 
     margin-bottom: 80px;
+    align-items: center;
+}
+
+.ylacontent a {
+    padding-top: 50px;
+    text-decoration: none;
+    color: #666666;
+    font-weight: bold;
+}
+
+.ylacontent a:hover {
+    color: #ffbf00;
 }
 
 .keskicontent {
