--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ h2 {
     padding-top: 70px;
     padding-inline: 25px;
     background-color: rgb(255, 255, 255);
+    align-items: center;
     
 }
 
@@ -176,17 +177,16 @@ h2 {
     display: flex;
     flex-direction: column; 
     margin-bottom: 80px;
-    align-items: center;
 }
 
-.ylacontent a {
-    padding-top: 50px;
+.content a {
     text-decoration: none;
     color: #666666;
     font-weight: bold;
+    padding-bottom: 50px;
 }
 
-.ylacontent a:hover {
+.content a:hover {
     color: #ffbf00;
 }
 
